@@ -59,6 +59,7 @@ Version 1.0.7.22
   -  Lots of other minor optimizations based on coding style improvements (Milian Wolff)
   -  Implemented setting to force spans to be closed before newlines, see SF#1727398 (Milian Wolff)
   -  Added missing credits for D language file to THANKS file (SF#1720899, BenBE)
+  -  Optimization to prevent loading the current language file twice (Milian Wolff)
   -  First of series of color scheme changes. Affected languages (sofar):
      * Assembler (x86)
      * Bash
